--- a/src/components/Produtos/Produtos.css
+++ b/src/components/Produtos/Produtos.css
@@ -324,3 +324,21 @@ body {
     grid-template-columns: 1fr;
   }
 }
+.botao-sair {
+  position: fixed;
+  top: 850px;
+  right: 25px;
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  padding: 12px 22px;
+  border-radius: 50px;
+  font-size: 16px;
+  cursor: pointer;
+  z-index: 010;
+  transition: background-color 0.3s ease;
+}
+
+.botao-sair:hover {
+  background-color: #c0392b;
+}
